--- a/ivy.xml
+++ b/ivy.xml
@@ -11,6 +11,7 @@
 	<publications defaultconf="build,deploy">
 		<artifact name="fmk-schema" ext="zip" />
 		<artifact name="fmk-schema-idws" ext="zip" />
+        <artifact name="fmk-schema-dist" ext="zip" />
         <artifact name="NamespaceOracle-generated" ext="properties" />
         <artifact name="fmk-schema-classes" ext="jar" conf="jar" />
         <artifact name="fmk-schema-source" ext="zip" conf="src" />
