--- a/build.xml
+++ b/build.xml
@@ -231,10 +231,10 @@
 			</classpath>
             <sysproperty key="target.dir" value="${standard.target.dir}"/>
 			<sysproperty key="VersionDate" value="2015_01_01"/>
-			<sysproperty key="WsdlName" value="PatientOrganisationRelation"/>
+			<sysproperty key="WsdlName" value="PatientRegistration"/>
 		</java>
-		<zip destfile="${standard.target.dir}/wsdl/PatientOrganisationRelation_2015_01_01-collection.zip"
-			  basedir="${standard.target.dir}/wsdl/PatientOrganisationRelation_2015_01_01"/>
+		<zip destfile="${standard.target.dir}/wsdl/PatientRegistration_2015_01_01-collection.zip"
+			  basedir="${standard.target.dir}/wsdl/PatientRegistration_2015_01_01"/>
 			
 		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${standard.work.dir}">
 			<classpath>
