--- a/build.xml
+++ b/build.xml
@@ -397,12 +397,29 @@
              update="true"
              basedir="${idws.target.dir}/wsdl" includes="MedicineCard-inline*_2013_06_01.wsdl"
                 />
-
         <zip destfile="${target.dir}/fmk-schema-dist.zip"
              description="Dist files for 2013_06_01 and 2012_06_01 MedicineCard (1.4.0 and 1.4.2)"
              update="false"
              basedir="${target.dir}/wsdl" includes="MedicineCard*.zip"
                 />
+
+        <!-- Dist collection for inlined 2015_01_01 MedicineCard wsdl files -->
+        <property name="medicinecard_2015_01_01_inline_dist_file" value="${target.dir}/wsdl/MedicineCard-inline_2015_01_01-dist.zip"/>
+        <zip destfile="${medicinecard_2015_01_01_inline_dist_file}"
+             description="Dist collection for inlined 2015_01_01 MedicineCard wsdl files (1.4.4)"
+             update="false"
+             basedir="${standard.target.dir}/wsdl" includes="MedicineCard-inline*_2015_01_01.wsdl"
+                />
+        <zip destfile="${medicinecard_2015_01_01_inline_dist_file}"
+             update="true"
+             basedir="${idws.target.dir}/wsdl" includes="MedicineCard-inline*_2015_01_01.wsdl"
+                />
+        <zip destfile="${target.dir}/fmk-schema-dist.zip"
+             description="Dist files for 2015_01_01 MedicineCard (1.4.4)"
+             update="false"
+             basedir="${target.dir}/wsdl" includes="MedicineCard*.zip"
+                />
+        
 
     </target>
 
