Nu bygges 1.4.6 inline WSDL'er m.m. Mange schema-filer tilføjet / tilpasset.

--- a/build.xml
+++ b/build.xml
@@ -84,11 +84,15 @@
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
                 />
-    	
-    	<replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_01_01.wsdl"
+
+        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_01_01.wsdl"
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
-    	                />
+                />
+        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01.wsdl"
+                 token="/${idws.schemas}/" value="/schemas/"
+                 description="Fix paths to referenced schemas"
+                />
     </target>
 
     <target name="filter-idws-xsds">
@@ -100,6 +104,7 @@
 	<target name="organize-schemas_idws" depends="compile, filter-specialized-xsds" >
 		<mkdir dir="${idws.work.dir}"  />
 		<mkdir dir="${idws.target.dir}/wsdl"  />
+
         <!-- 1.4.0 - 20120601 -->
         <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${idws.work.dir}">
             <classpath>
@@ -114,21 +119,22 @@
             <fileset dir="${idws.work.dir}/etc" includes="schemas/**/*.dtd"/>
         </copy>
         <zip destfile="${idws.target.dir}/wsdl/MedicineCard_Idws_2012_06_01-collection.zip" basedir="${idws.target.dir}/wsdl/MedicineCard_Idws_2012_06_01"/>
-		
+
+
 		 <!-- 1.4.2 - 20130601 -->
-		        <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${idws.work.dir}">
-		            <classpath>
-		                <path location="${build.dir}"/>
-		                <fileset dir="lib/build" excludes="*gwt*"/>
-		            </classpath>
-		            <sysproperty key="target.dir" value="${idws.target.dir}" />
-		            <sysproperty key="VersionDate" value="Idws_2013_06_01"/>
-		            <sysproperty key="WsdlName" value="MedicineCard"/>
-		        </java>
-		        <copy todir="${idws.target.dir}/wsdl/MedicineCard_Idws_2013_06_01">
-		            <fileset dir="${idws.work.dir}/etc" includes="schemas/**/*.dtd"/>
-		        </copy>
-		        <zip destfile="${idws.target.dir}/wsdl/MedicineCard_Idws_2013_06_01-collection.zip" basedir="${idws.target.dir}/wsdl/MedicineCard_Idws_2013_06_01"/>
+        <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${idws.work.dir}">
+            <classpath>
+                <path location="${build.dir}"/>
+                <fileset dir="lib/build" excludes="*gwt*"/>
+            </classpath>
+            <sysproperty key="target.dir" value="${idws.target.dir}" />
+            <sysproperty key="VersionDate" value="Idws_2013_06_01"/>
+            <sysproperty key="WsdlName" value="MedicineCard"/>
+        </java>
+        <copy todir="${idws.target.dir}/wsdl/MedicineCard_Idws_2013_06_01">
+            <fileset dir="${idws.work.dir}/etc" includes="schemas/**/*.dtd"/>
+        </copy>
+        <zip destfile="${idws.target.dir}/wsdl/MedicineCard_Idws_2013_06_01-collection.zip" basedir="${idws.target.dir}/wsdl/MedicineCard_Idws_2013_06_01"/>
 
 
         <!-- 1.4.4 - 20150101 -->
@@ -146,7 +152,23 @@
         </copy>
         <zip destfile="${idws.target.dir}/wsdl/MedicineCard_Idws_2015_01_01-collection.zip" basedir="${idws.target.dir}/wsdl/MedicineCard_Idws_2015_01_01"/>
 
-        	
+
+        <!-- 1.4.6 - 20150601 -->
+        <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${idws.work.dir}">
+            <classpath>
+                <path location="${build.dir}"/>
+                <fileset dir="lib/build" excludes="*gwt*"/>
+            </classpath>
+            <sysproperty key="target.dir" value="${idws.target.dir}" />
+            <sysproperty key="VersionDate" value="Idws_2015_06_01"/>
+            <sysproperty key="WsdlName" value="MedicineCard"/>
+        </java>
+        <copy todir="${idws.target.dir}/wsdl/MedicineCard_Idws_2015_06_01">
+            <fileset dir="${idws.work.dir}/etc" includes="schemas/**/*.dtd"/>
+        </copy>
+        <zip destfile="${idws.target.dir}/wsdl/MedicineCard_Idws_2015_06_01-collection.zip" basedir="${idws.target.dir}/wsdl/MedicineCard_Idws_2015_06_01"/>
+
+
         <copy todir="${idws.target.dir}">
             <fileset dir="${idws.target.dir}/gensrc/META-INF" includes="schemas/**"/>
             <fileset dir="${idws.work.dir}/etc" includes="schemas/**/*.dtd"/>
@@ -196,19 +218,18 @@
 			</java>
 		<zip destfile="${standard.target.dir}/wsdl/EffectuationOrdering_2013_06_01-collection.zip"
 				  basedir="${standard.target.dir}/wsdl/EffectuationOrdering_2013_06_01"/>
-		
-		<java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${standard.work.dir}">
-					<classpath>
-						<path location="${build.dir}"/>
-						<fileset dir="lib/build" excludes="*gwt*"/>
-					</classpath>
-		            <sysproperty key="target.dir" value="${standard.target.dir}"/>
-					<sysproperty key="VersionDate" value="2015_01_01"/>
-					<sysproperty key="WsdlName" value="EffectuationOrdering"/>
-					</java>
-				<zip destfile="${standard.target.dir}/wsdl/EffectuationOrdering_2015_01_01-collection.zip"
-						  basedir="${standard.target.dir}/wsdl/EffectuationOrdering_2015_01_01"/>
-			
+
+        <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${standard.work.dir}">
+            <classpath>
+                <path location="${build.dir}"/>
+                <fileset dir="lib/build" excludes="*gwt*"/>
+            </classpath>
+            <sysproperty key="target.dir" value="${standard.target.dir}"/>
+            <sysproperty key="VersionDate" value="2015_01_01"/>
+            <sysproperty key="WsdlName" value="EffectuationOrdering"/>
+        </java>
+        <zip destfile="${standard.target.dir}/wsdl/EffectuationOrdering_2015_01_01-collection.zip"
+             basedir="${standard.target.dir}/wsdl/EffectuationOrdering_2015_01_01"/>
 
         <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${standard.work.dir}">
             <classpath>
@@ -294,7 +315,18 @@
         </java>
         <zip destfile="${standard.target.dir}/wsdl/MedicineCard_2015_01_01-collection.zip" basedir="${standard.target.dir}/wsdl/MedicineCard_2015_01_01"/>
 
-        	
+        <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${standard.work.dir}">
+            <classpath>
+                <path location="${build.dir}"/>
+                <fileset dir="lib/build" excludes="*gwt*"/>
+            </classpath>
+            <sysproperty key="target.dir" value="${standard.target.dir}"/>
+            <sysproperty key="VersionDate" value="2015_06_01"/>
+            <sysproperty key="WsdlName" value="MedicineCard"/>
+        </java>
+        <zip destfile="${standard.target.dir}/wsdl/MedicineCard_2015_06_01-collection.zip" basedir="${standard.target.dir}/wsdl/MedicineCard_2015_06_01"/>
+
+
         <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${standard.work.dir}">
             <classpath>
                 <path location="${build.dir}"/>
@@ -431,7 +463,24 @@
              update="false"
              basedir="${target.dir}/wsdl" includes="MedicineCard*.zip"
                 />
-        
+
+        <!-- Dist collection for inlined 2015_06_01 MedicineCard wsdl files -->
+        <property name="medicinecard_2015_06_01_inline_dist_file" value="${target.dir}/wsdl/MedicineCard-inline_2015_06_01-dist.zip"/>
+        <zip destfile="${medicinecard_2015_06_01_inline_dist_file}"
+             description="Dist collection for inlined 2015_06_01 MedicineCard wsdl files (1.4.6)"
+             update="false"
+             basedir="${standard.target.dir}/wsdl" includes="MedicineCard-inline*_2015_06_01.wsdl"
+                />
+        <zip destfile="${medicinecard_2015_06_01_inline_dist_file}"
+             update="true"
+             basedir="${idws.target.dir}/wsdl" includes="MedicineCard-inline*_2015_06_01.wsdl"
+                />
+        <zip destfile="${target.dir}/fmk-schema-dist.zip"
+             description="Dist files for 2015_06_01 MedicineCard (1.4.6)"
+             update="false"
+             basedir="${target.dir}/wsdl" includes="MedicineCard*.zip"
+                />
+
 
     </target>
 
@@ -441,6 +490,7 @@
     <property name="medicinkort.webservice-1.4.version" value="2012_06_01"/>
     <property name="medicinkort.webservice-1.4.2.version" value="2013_06_01"/>
 	<property name="medicinkort.webservice-1.4.4.version" value="2015_01_01"/>
+	<property name="medicinkort.webservice-1.4.6.version" value="2015_06_01"/>
     <property name="auditlog.webservice.version" value="2009_01_01"/>
     <property name="dumprestore.webservice.version" value="2013_01_01"/>
 	<property name="versionservice.webservice.version" value="2014_08_01"/>
@@ -500,6 +550,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_${medicinkort.webservice-1.4.version}.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_${medicinkort.webservice-1.4.2.version}.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_${medicinkort.webservice-1.4.4.version}.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+    	<codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_${medicinkort.webservice-1.4.6.version}.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_${medicinkort.webservice-1.4.version}.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_${medicinkort.webservice-1.4.2.version}.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_${medicinkort.webservice-1.4.4.version}.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
