--- a/build.xml
+++ b/build.xml
@@ -20,6 +20,9 @@
     <property name="standard.target.dir" value="${target.dir}/standard/target" />
     <property name="standard.work.dir" value="${target.dir}/standard/workdir" />
 
+    <property name="sourceversion" value="1.8"/>
+    <property name="targetversion" value="1.8"/>
+
     <path id="classpath">
         <fileset dir="lib/build">
             <include name="**/*.jar"/>
@@ -571,7 +574,7 @@
             <fileset dir="${standard.target.dir}/gentestsrc/resources" />
         </zip>
 
-        <javac classpathref="classpath" debug="true" source="${sourceversion}" target="${targetversion}" destdir="${standard.target.dir}/genclasses" fork="true" memorymaximumsize="512m" encoding="UTF-8">
+        <javac classpathref="classpath" debug="true" source="${sourceversion}" target="${targetversion}" destdir="${standard.target.dir}/genclasses" fork="true" includeantruntime="false" memorymaximumsize="1024m" encoding="UTF-8">
             <src path="${standard.target.dir}/gentestsrc/src"/>
         </javac>
         <jar basedir="${standard.target.dir}/gentestsrc/resources" destfile="${fmk-classes.target.jar}">
