--- a/build.xml
+++ b/build.xml
@@ -598,6 +598,18 @@
         </java>
     </target>
 
+    <target name="validateDokuWikiXML-1-4-4" depends="organize-schemas">
+        <java classname="dk.medicinkortet.notproduktion.validateWikiExamples.WikiSitemapValidator" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${standard.work.dir}">
+            <classpath>
+                <path location="${build.dir}"/>
+                <path location="${standard.target.dir}/gensrc"/>
+                <fileset dir="lib/build" excludes="*gwt*"/>
+            </classpath>
+            <arg value="http://wiki.fmk.netic.dk/doku.php?id=fmk:1.4.4:fmk_1.4.4_snitflade&amp;do=index"/> <!-- Sitemap with 1.4.4 context expanded -->
+            <arg value="http://www.dkma.dk/medicinecard/xml.schema/2015/01/01"/>                       <!-- Namespace for 1.4.4 which will be added to the XML snippets -->
+        </java>
+    </target>
+
     <target name="clean">
         <delete dir="build"/>
         <delete dir="${target.dir}"/>
