--- a/build.xml
+++ b/build.xml
@@ -418,7 +418,7 @@
         <!-- Dist collection for MedicineCard 2013_06_01 -->
         <property name="medicinecard_2013_06_01_dist_file" value="${target.dir}/wsdl/MedicineCard_2013_06_01-collection-dist.zip"/>
         <zip destfile="${medicinecard_2013_06_01_dist_file}"
-             description="Dist collection for MedicineCard 2013_06_01 (1.4.0)"
+             description="Dist collection for MedicineCard 2013_06_01 (1.4.2)"
              update="false"
              basedir="${standard.target.dir}/wsdl" includes="MedicineCard*_2013_06_01-collection.zip"
                 />
@@ -426,6 +426,32 @@
              update="true"
              basedir="${idws.target.dir}/wsdl" includes="MedicineCard*_2013_06_01-collection.zip"
                 />
+
+
+        <!-- Dist collection for MedicineCard 2015_01_01 -->
+        <property name="medicinecard_2015_01_01_dist_file" value="${target.dir}/wsdl/MedicineCard_2015_01_01-collection-dist.zip"/>
+        <zip destfile="${medicinecard_2015_01_01_dist_file}"
+             description="Dist collection for MedicineCard 2015_01_01 (1.4.4)"
+             update="false"
+             basedir="${standard.target.dir}/wsdl" includes="MedicineCard*_2015_01_01-collection.zip"
+        />
+        <zip destfile="${medicinecard_2015_01_01_dist_file}"
+             update="true"
+             basedir="${idws.target.dir}/wsdl" includes="MedicineCard*_2015_01_01-collection.zip"
+        />
+
+
+        <!-- Dist collection for MedicineCard 2015_06_01 -->
+        <property name="medicinecard_2015_06_01_dist_file" value="${target.dir}/wsdl/MedicineCard_2015_06_01-collection-dist.zip"/>
+        <zip destfile="${medicinecard_2015_06_01_dist_file}"
+             description="Dist collection for MedicineCard 2015_06_01 (1.4.6)"
+             update="false"
+             basedir="${standard.target.dir}/wsdl" includes="MedicineCard*_2015_06_01-collection.zip"
+        />
+        <zip destfile="${medicinecard_2015_06_01_dist_file}"
+             update="true"
+             basedir="${idws.target.dir}/wsdl" includes="MedicineCard*_2015_06_01-collection.zip"
+        />
 
 
         <!-- Dist collection for inlined 2012_06_01 MedicineCard wsdl files -->
@@ -452,11 +478,6 @@
              update="true"
              basedir="${idws.target.dir}/wsdl" includes="MedicineCard-inline*_2013_06_01.wsdl"
                 />
-        <zip destfile="${target.dir}/fmk-schema-dist.zip"
-             description="Dist files for 2013_06_01 and 2012_06_01 MedicineCard (1.4.0 and 1.4.2)"
-             update="false"
-             basedir="${target.dir}/wsdl" includes="MedicineCard*.zip"
-                />
 
         <!-- Dist collection for inlined 2015_01_01 MedicineCard wsdl files -->
         <property name="medicinecard_2015_01_01_inline_dist_file" value="${target.dir}/wsdl/MedicineCard-inline_2015_01_01-dist.zip"/>
@@ -468,11 +489,6 @@
         <zip destfile="${medicinecard_2015_01_01_inline_dist_file}"
              update="true"
              basedir="${idws.target.dir}/wsdl" includes="MedicineCard-inline*_2015_01_01.wsdl"
-                />
-        <zip destfile="${target.dir}/fmk-schema-dist.zip"
-             description="Dist files for 2015_01_01 MedicineCard (1.4.4)"
-             update="false"
-             basedir="${target.dir}/wsdl" includes="MedicineCard*.zip"
                 />
 
         <!-- Dist collection for inlined 2015_06_01 MedicineCard wsdl files -->
@@ -486,8 +502,10 @@
              update="true"
              basedir="${idws.target.dir}/wsdl" includes="MedicineCard-inline*_2015_06_01.wsdl"
                 />
+
+        <!-- Collection of all collections -->
         <zip destfile="${target.dir}/fmk-schema-dist.zip"
-             description="Dist files for 2015_06_01 MedicineCard (1.4.6)"
+             description="All dist files for MedicineCard"
              update="false"
              basedir="${target.dir}/wsdl" includes="MedicineCard*.zip"
                 />
