--- a/build.xml
+++ b/build.xml
@@ -314,6 +314,7 @@
         <delete dir="${standard.target.dir}/gentestsrc"/>
         <mkdir dir="${standard.target.dir}/gentestsrc-tmp"/>
 
+        <!-- IMPORTANT: whenever a new <codegen> element regarding a new wsdl-file is added to this section, remember to add an <exec>-element validating the wsdl in the "validate-wsdl" target below -->
         <codegen wsdlfilename="${standard.target.dir}/wsdl/PatientOrganisationRelation-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/PatientOrganisationRelation-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -330,6 +331,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/PEMAuditLog_2009_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/DumpRestore-inline_2013_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/VersionService-inline_2014_08_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <!-- IMPORTANT: whenever a new <codegen> element regarding a new wsdl-file is added to this section, remember to add an <exec>-element validating the wsdl in the "validate-wsdl" target below -->
 
         <copy todir="${standard.target.dir}/gentestsrc" encoding="${codegen-encoding}" outputencoding="UTF-8">
             <fileset dir="${standard.target.dir}/gentestsrc-tmp" includes="**/*.java"/>
@@ -389,4 +391,96 @@
         <delete dir="lib/build"/>
         <delete dir="lib/test"/>
     </target>
+	
+    <property name="paramprefix" value="-"/>
+    
+    <condition property="paramprefix" value="/">
+        <isset property="windows"/>
+    </condition>
+    
+	<target name="validate-wsdl">
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/PatientOrganisationRelation-inline_2012_06_01.wsdl"/>
+			<arg line="${paramprefix}out:POR_2012_06_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/PatientOrganisationRelation-inline_2013_06_01.wsdl"/>
+			<arg line="${paramprefix}out:POR_2013_06_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01.wsdl"/>
+			<arg line="${paramprefix}out:POR_2015_01_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl//MedicineCard-inline_2012_01_01.wsdl"/>
+			<arg line="${paramprefix}out:MC_2012_01_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/MedicineCard-inline_2012_06_01.wsdl"/>
+			<arg line="${paramprefix}out:MC_2012_06_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/MedicineCard-inline_2013_06_01.wsdl"/>
+			<arg line="${paramprefix}out:MC_2013_06_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01.wsdl"/>
+			<arg line="${paramprefix}out:MC_2015_01_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E1.wsdl"/>
+			<arg line="${paramprefix}out:MC_2015_01_01_E1.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01.wsdl"/>
+			<arg line="${paramprefix}out:MC_2015_06_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2012_06_01.wsdl"/>
+			<arg line="${paramprefix}out:EO_2012_06_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2013_06_01.wsdl"/>
+			<arg line="${paramprefix}out:EO_2013_06_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01.wsdl"/>
+			<arg line="${paramprefix}out:EO_2015_01_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2013_pem.wsdl"/>
+			<arg line="${paramprefix}out:EOPEM_2013.cs"/>
+		</exec>
+		<!-- Omitted, due to error 
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/PEMAuditLog_2009_01_01.wsdl"/>
+			<arg line="${paramprefix}out:PEMAuditLog_2009_01_01.cs"/>
+		</exec> -->
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/DumpRestore-inline_2013_01_01.wsdl"/>
+			<arg line="${paramprefix}out:DumpRestore_2013_01_01.cs"/>
+		</exec>
+		<exec executable="wsdl">
+			<arg line="${paramprefix}nologo"/>
+			<arg line="${standard.target.dir}/wsdl/VersionService-inline_2014_08_01.wsdl"/>
+			<arg line="${paramprefix}out:VersionService_2014_08_01.cs"/>
+		</exec>
+	</target>
+
+
 </project>
